# MMOpenGL

./: README.md
3rdpart/glad/include/glad/: glad.h
3rdpart/glad/src/: glad.c
3rdpart/glfw/lib/: glfw3.lib
3rdpart/glfw/lib/pkgconfig/: glfw3.pc
MMGL/: CMakeLists.txt  MMGL.h  MMGLProgram.cpp  MMGLShader.cpp  MMGLVAO.cpp
MMOpenGL/: CMakeLists.txt  MMOpenGL.cpp
